force-app/main/default/objects/DocumentList__c/DocumentList__c.object-meta.xml
<CustomObject>
    <description>Represents a list of documents</description>
    <label>Document List</label>
    <nameField>
        <label>Document List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>