force-app/main/default/objects/DocumentList__c/fields/CheckboxField__c.field-meta.xml
<CustomField>
    <fullName>CheckboxField__c</fullName>
    <description>Api Name of the checkbox field that is checked when all documents have been approved</description>
    <inlineHelpText>Api Name of the checkbox field that is checked when all documents have been approved</inlineHelpText>
    <label>Checkbox Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>