force-app/main/default/objects/DocumentList__c/fields/NumberOfDocuments__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDocuments__c</fullName>
    <label>Number of Documents</label>
    <summaryForeignKey>DocumentListItem__c.DocumentList__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>