force-app/main/default/objects/DocumentList__c/fields/NumberOfOptionalDocuments__c.field-meta.xml
<CustomField>
    <fullName>NumberOfOptionalDocuments__c</fullName>
    <formula>NumberOfDocuments__c -  NumberOfRequiredDocuments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Optional Documents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>