force-app/main/default/objects/DocumentList__c/fields/NumberOfRequiredDocuments__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRequiredDocuments__c</fullName>
    <label>Number of Required Documents</label>
    <summaryFilterItems>
        <field>DocumentListItem__c.Required__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>DocumentListItem__c.DocumentList__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>