force-app/main/default/objects/DocumentList__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>The Object API Name to which this list of documents will be attached</description>
    <inlineHelpText>The Object API Name to which this list of documents will be attached</inlineHelpText>
    <label>Object Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>